--- a/templates/game.html
+++ b/templates/game.html
@@ -1,67 +1,69 @@
 <!doctype html>
 <html>
 <head>
-  <title>Madlib Game</title>
+    <title>Madlib Game</title>
 </head>
+
 <body>
     Let's play!
     <br>
     <br>
-<form action="/madlib">
-    Choose a person:<br>
-    <input type="radio" name="madlib_person" value="Mulder">Mulder<br>
-    <input type="radio" name="madlib_person" value="Scully">Scully<br><br>
-    Choose a color:<br>
-    <select name="madlib_color">
-        <option value="purple">Purple</option>
-        <option value="blue">Blue</option>
-        <option value="red">Red</option>
-    </select>
-    <br>
-    <br>
-    Choose a noun:<br>
-    <input type="radio" name="madlib_noun" value="extraterrestrial">Extraterrestrial<br>
-    <input type="radio" name="madlib_noun" value="human">Human<br><br>
-    Enter an adjective:
-    <input type="text" name="madlib_adj">
-    <br><br>
-    Real or fake?<br>
-    <input type="radio" name="real_or_fake" value="real">Real<br>
-    <input type="radio" name="real_or_fake" value="fake">Fake<br><br>
-    Choose first celebrity:<br><select name="celebrity1">
-        <option value="Brad Pitt">Brad Pitt</option>
-        <option value="Angelina Jolie">Angelina Jolie</option>
-        <option value="Jennifer Aniston">Jennifer Aniston</option>
-    </select><br>
-    Choose second celebrity:<br><select name="celebrity2">
-        <option value="Brad Pitt">Brad Pitt</option>
-        <option value="Angelina Jolie">Angelina Jolie</option>
-        <option value="Jennifer Aniston">Jennifer Aniston</option>
-    </select><br>
-    Choose third celebrity:<br><select name="celebrity3">
-        <option value="Brad Pitt">Brad Pitt</option>
-        <option value="Angelina Jolie">Angelina Jolie</option>
-        <option value="Jennifer Aniston">Jennifer Aniston</option>
-    </select><br><br>
-    Choose body part:<br>
-    <input type="radio" name="plural_body_part" value="ponytails">ponytails<br>
-    <input type="radio" name="plural_body_part" value="toes">toes<br><br>
-    Choose a place:<br><select name="place">
-        <option value="dry cleaner">dry cleaner</option>
-        <option value="DMV">DMV</option>
-        <option value="dentist office">dentist office</option>
-    </select><br><br>
-    Choose a plural noun:<br>
-    <input type="radio" name="plural_noun" value="fire escapes">fire escape<br>
-    <input type="radio" name="plural_noun" value="ice cream trucks">ice cream trucks<br><br>
-    Choose a verb ending in -ing<br>
-    <select name="verb_ing">
-        <option value="messing">messing</option>
-        <option value="Netflix-and-chilling">Netflix-and-chilling</option>
-        <option value="frolicking">frolicking</option>
-    </select><br>
-
-    <input type="submit">
-</form>
+    <form action="/madlib">
+        Choose a person:<br>
+            <input type="radio" name="madlib_person" value="Mulder">Mulder<br>
+            <input type="radio" name="madlib_person" value="Scully">Scully<br><br>
+        Choose a color:<br>
+            <select name="madlib_color">
+                <option value="purple">Purple</option>
+                <option value="blue">Blue</option>
+                <option value="red">Red</option>
+            </select><br><br>
+        Choose a noun:<br>
+            <input type="radio" name="madlib_noun" value="extraterrestrial">Extraterrestrial<br>
+            <input type="radio" name="madlib_noun" value="human">Human<br><br>
+        Enter an adjective:
+            <input type="text" name="madlib_adj"><br><br>
+        Real or fake?<br>
+            <input type="radio" name="real_or_fake" value="real">Real<br>
+            <input type="radio" name="real_or_fake" value="fake">Fake<br><br>
+        Choose first celebrity:<br>
+            <select name="celebrity1">
+                <option value="Brad Pitt">Brad Pitt</option>
+                <option value="Angelina Jolie">Angelina Jolie</option>
+                <option value="Jennifer Aniston">Jennifer Aniston</option>
+            </select><br>
+        Choose second celebrity:<br>
+            <select name="celebrity2">
+                <option value="Brad Pitt">Brad Pitt</option>
+                <option value="Angelina Jolie">Angelina Jolie</option>
+                <option value="Jennifer Aniston">Jennifer Aniston</option>
+            </select><br>
+        Choose third celebrity:<br>
+            <select name="celebrity3">
+                <option value="Brad Pitt">Brad Pitt</option>
+                <option value="Angelina Jolie">Angelina Jolie</option>
+                <option value="Jennifer Aniston">Jennifer Aniston</option>
+            </select><br><br>
+        Choose body part:<br>
+            <input type="radio" name="plural_body_part" value="ponytails">ponytails<br>
+            <input type="radio" name="plural_body_part" value="toes">toes<br><br>
+        Choose a place:<br>
+            <select name="place">
+                <option value="dry cleaner">dry cleaner</option>
+                <option value="DMV">DMV</option>
+                <option value="dentist office">dentist office</option>
+            </select><br><br>
+        Choose a plural noun:<br>
+            <input type="radio" name="plural_noun" value="fire escapes">fire escape<br>
+            <input type="radio" name="plural_noun" value="ice cream trucks">ice cream trucks<br><br>
+        Choose a verb ending in -ing<br>
+            <select name="verb_ing">
+                <option value="messing">messing</option>
+                <option value="Netflix-and-chilling">Netflix-and-chilling</option>
+                <option value="frolicking">frolicking</option>
+            </select><br>
+            <input type="submit">
+    </form>
 </body>
+
 </html>
