--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>Hi There!</title>
+    <title>Hi There!</title>
 </head>
+
 <body>
-
-<h1>Hi There!</h1>
-
-<form action="/greet">
-  What's your name? <input type="text" name="person">
-  <input type="submit">
-</form>
-
+    <h1>Hi There!</h1>
+    <form action="/greet">
+        What's your name? 
+        <input type="text" name="person"><br><br>
+        Would you like compliments?<br>
+        <input type="radio" name="compliments" value="Yes!">Yes!<br>
+        <input type="radio" name="compliments" value="No">No<br><br>
+        <input type="submit">
+    </form>
 </body>
+
 </html>
